# Fair-Mango

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
docs/: how-to-guides.md  index.md  reference.md
docs/api_documentation/: base.md  dataset.md  metrics.md  superset.md
docs/concepts/: fairness.md
fair_mango/dataset/: dataset.py
fair_mango/metrics/: base.py  metrics.py  superset.py
tests/data/: heart_data.csv
tests/dataset/: test_dataset.py
tests/metrics/: test_base.py  test_metrics.py  test_superset.py
